# ProcessScheduling

./: CMakeLists.txt  README.md
include/: ArgumentHandler.h  CustomProcess.h  EDF.h  FCFS.h  LLF.h  RoundRobin.h  SJF.h  schedulingStrategy.h
src/: ArgumentHandler.cpp  CustomProcess.cpp  EDF.cpp  FCFS.cpp  LLF.cpp  Process.cpp  RoundRobin.cpp  SJF.cpp  schedulingStrategy.cpp
